force-app/main/default/objects/Opportunity/fields/High_Value_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>High_Value_Opportunity__c</fullName>
    <formula>Amount &gt; 500000 &amp;&amp; Probability &gt;= 75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High-Value Opportunity</label>
    <type>Checkbox</type>
</CustomField>