force-app/main/default/objects/Opportunity/fields/Is_Large_Deal__c.field-meta.xml
<CustomField>
    <fullName>Is_Large_Deal__c</fullName>
    <formula>Amount &gt; 1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Large Deal</label>
    <type>Checkbox</type>
</CustomField>