force-app/main/default/objects/Opportunity/fields/Opportunity_Type_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type_Stage__c</fullName>
    <formula>TEXT(Type)  &amp; &quot;-&quot; &amp;  TEXT( StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Type &amp; Stage</label>
    <type>Text</type>
</CustomField>