force-app/main/default/objects/Opportunity/fields/Potential_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Potential_Revenue__c</fullName>
    <formula>Amount * Probability/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>