force-app/main/default/objects/Opportunity/fields/Quarterly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Revenue__c</fullName>
    <formula>Amount /4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>