force-app/main/default/objects/Opportunity/fields/Total_Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Quantity__c</fullName>
    <label>Total Product Quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>