force-app/main/default/objects/Opportunity/fields/Total_Products_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Products_Amount__c</fullName>
    <label>Total Products Amount</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>