force-app/main/default/objects/Opportunity/fields/Weighted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Revenue__c</fullName>
    <formula>Amount *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>