force-app/main/default/objects/Opportunity/recordTypes/B2B_Sales.recordType-meta.xml
<RecordType>
    <fullName>B2B_Sales</fullName>
    <active>true</active>
    <businessProcess>B2B Sales</businessProcess>
    <label>B2B Sales</label>
</RecordType>