force-app/main/default/objects/Opportunity/recordTypes/B2C_Sales.recordType-meta.xml
<RecordType>
    <fullName>B2C_Sales</fullName>
    <active>true</active>
    <businessProcess>B2C Sales</businessProcess>
    <label>B2C Sales</label>
</RecordType>