force-app/main/default/objects/Opportunity/validationRules/CloseDate_Cannot_Be_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>CloseDate_Cannot_Be_Past</fullName>
    <active>false</active>
    <description>Close Date cannot be in the past.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK( CloseDate )),
     CloseDate &lt; TODAY()

)</errorConditionFormula>
    <errorMessage>Close Date cannot be in the past.</errorMessage>
</ValidationRule>