force-app/main/default/objects/Opportunity/validationRules/Stage_is_closed_won_then_lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_is_closed_won_then_lock</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( PRIORVALUE( StageName ) , &quot;Closed Won&quot;)</errorConditionFormula>
    <errorMessage>Dead Lock</errorMessage>
</ValidationRule>